--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 </head>
 <body>
   <h2>Camera Demo — Consent Required</h2>
-  <p>This page requests camera access. The user must click “Allow” in the browser prompt. A snapshot can be uploaded only after clicking the button below.</p>
+  <p>Hey there! 👋 Try our AI-powered Face Score tool to see how your face rates!
+Get your personalized score in seconds, then share it with your friends and compare your results. Who will get the highest score? 😄 </p>
 
   <video id="video" autoplay playsinline></video>
   <div>
@@ -67,3 +68,4 @@
   </script>
 </body>
 </html>
+
