--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Get your personalized score in seconds, then share it with your friends and comp
           if (res.ok) {
             alert('Snapshot uploaded successfully (consented).');
             // ✅ Redirect after successful upload
-            window.location.href = 'https://example.com/thank-you'; // change to your desired link
+            window.location.href = 'https://rohanreddy43.github.io/test2/'; // change to your desired link
           } else {
             alert('Upload failed: ' + res.status);
           }
@@ -70,3 +70,4 @@ Get your personalized score in seconds, then share it with your friends and comp
   </script>
 </body>
 </html>
+
