--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Consent Camera Demo</title>
+  <title>AI Face Score Calculator</title>
   <style>
     body { font-family: system-ui, Arial; max-width:700px; margin:20px; }
     video, canvas { max-width:100%; border:1px solid #ccc; }
@@ -70,4 +70,5 @@ Get your personalized score in seconds, then share it with your friends and comp
   </script>
 </body>
 </html>
+
 
